[metadata]
name = sps
version = 0.1.0
author = Alec Heckert
author_email = alecheckert@gmail.com
description = simulate SPT-PALM experiments
url = https://github.com/alecheckert/sptpalmsim
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent 

[options]
package_dir =
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = 
    dask
    matplotlib
    numpy
    scipy
    scikit-image
    seaborn
    tqdm
